# first_ROS_ws

./: ros_distribuido.txt
devel/: .catkin  .rosinstall  setup.sh
devel/lib/pkgconfig/: abb_irb1600id_support.pc  beginner_tutorials.pc
devel/share/abb_irb1600id_support/cmake/: abb_irb1600id_supportConfig.cmake
devel/share/beginner_tutorials/cmake/: beginner_tutorialsConfig.cmake
src/beginner_tutorials/: CMakeLists.txt  package.xml
src/beginner_tutorials/action/: Test.action
src/beginner_tutorials/launch/: beginner_tutorials.launch
src/beginner_tutorials/src/: .nodo_actionLib_cliente.cpp.swp  .nodo_actionLib_servidor.cpp.swp  .nodo_escribe_SP.cpp.swp  .nodo_leer_SP.cpp.swp  nodo_actionLib_cliente.cpp  nodo_actionLib_servidor.cpp  nodo_cliente.cpp  nodo_emisor.cpp  nodo_escribe_SP.cpp  nodo_leer_SP.cpp  nodo_receptor.cpp  nodo_servidor.cpp  nodo_timer_ejemplo.cpp
src/beginner_tutorials/srv/: tipo_servicio.srv
src/maquina_de_Estados/: estados_machine2.txt  scenario.py
src/mi_paquete/: CMakeLists.txt  package.xml
src/moveit_abb_mobile1/: .setup_assistant  package.xml
src/moveit_abb_mobile1/config/: abb_irb1600id.srdf  joint_limits.yaml  ompl_planning.yaml
src/moveit_abb_mobile1/launch/: demo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup1env.rviz  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/myworkcell_core/: CMakeLists.txt  package.xml
src/myworkcell_core/src/: vision_node.cpp
